PRUEBAS/Prueba10/y.output
State 6 conflicts: 1 reduce/reduce
State 7 conflicts: 1 reduce/reduce
State 8 conflicts: 1 reduce/reduce
State 9 conflicts: 1 reduce/reduce
State 10 conflicts: 1 reduce/reduce


Grammar

    0 $accept: inicio $end

    1 inicio: NOMBRE '=' E
    2       | E
    3       | T
    4       | G
    5       | H
    6       | J
    7       | K

    8 E: E '+' T
    9  | T

   10 T: T '-' G
   11  | G

   12 G: G '*' H
   13  | H

   14 H: H '/' J
   15  | J

   16 J: J '^' K
   17  | K

   18 K: NUMERO
   19  | '(' E ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 19
    ')' (41) 19
    '*' (42) 12
    '+' (43) 8
    '-' (45) 10
    '/' (47) 14
    '=' (61) 1
    '^' (94) 16
    error (256)
    NOMBRE (258) 1
    NUMERO (259) 18


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    inicio (14)
        on left: 1 2 3 4 5 6 7
        on right: 0
    E (15)
        on left: 8 9
        on right: 1 2 8 19
    T (16)
        on left: 10 11
        on right: 3 8 9 10
    G (17)
        on left: 12 13
        on right: 4 10 11 12
    H (18)
        on left: 14 15
        on right: 5 12 13 14
    J (19)
        on left: 16 17
        on right: 6 14 15 16
    K (20)
        on left: 18 19
        on right: 7 16 17


State 0

    0 $accept: . inicio $end

    NOMBRE  shift, and go to state 1
    NUMERO  shift, and go to state 2
    '('     shift, and go to state 3

    inicio  go to state 4
    E       go to state 5
    T       go to state 6
    G       go to state 7
    H       go to state 8
    J       go to state 9
    K       go to state 10


State 1

    1 inicio: NOMBRE . '=' E

    '='  shift, and go to state 11


State 2

   18 K: NUMERO .

    $default  reduce using rule 18 (K)


State 3

   19 K: '(' . E ')'

    NUMERO  shift, and go to state 2
    '('     shift, and go to state 3

    E  go to state 12
    T  go to state 13
    G  go to state 14
    H  go to state 15
    J  go to state 16
    K  go to state 17


State 4

    0 $accept: inicio . $end

    $end  shift, and go to state 18


State 5

    2 inicio: E .
    8 E: E . '+' T

    '+'  shift, and go to state 19

    $default  reduce using rule 2 (inicio)


State 6

    3 inicio: T .
    9 E: T .
   10 T: T . '-' G

    '-'  shift, and go to state 20

    $end      reduce using rule 3 (inicio)
    $end      [reduce using rule 9 (E)]
    '+'       reduce using rule 9 (E)
    $default  reduce using rule 3 (inicio)


State 7

    4 inicio: G .
   11 T: G .
   12 G: G . '*' H

    '*'  shift, and go to state 21

    $end      reduce using rule 4 (inicio)
    $end      [reduce using rule 11 (T)]
    $default  reduce using rule 11 (T)


State 8

    5 inicio: H .
   13 G: H .
   14 H: H . '/' J

    '/'  shift, and go to state 22

    $end      reduce using rule 5 (inicio)
    $end      [reduce using rule 13 (G)]
    $default  reduce using rule 13 (G)


State 9

    6 inicio: J .
   15 H: J .
   16 J: J . '^' K

    '^'  shift, and go to state 23

    $end      reduce using rule 6 (inicio)
    $end      [reduce using rule 15 (H)]
    $default  reduce using rule 15 (H)


State 10

    7 inicio: K .
   17 J: K .

    $end      reduce using rule 7 (inicio)
    $end      [reduce using rule 17 (J)]
    $default  reduce using rule 17 (J)


State 11

    1 inicio: NOMBRE '=' . E

    NUMERO  shift, and go to state 2
    '('     shift, and go to state 3

    E  go to state 24
    T  go to state 13
    G  go to state 14
    H  go to state 15
    J  go to state 16
    K  go to state 17


State 12

    8 E: E . '+' T
   19 K: '(' E . ')'

    '+'  shift, and go to state 19
    ')'  shift, and go to state 25


State 13

    9 E: T .
   10 T: T . '-' G

    '-'  shift, and go to state 20

    $default  reduce using rule 9 (E)


State 14

   11 T: G .
   12 G: G . '*' H

    '*'  shift, and go to state 21

    $default  reduce using rule 11 (T)


State 15

   13 G: H .
   14 H: H . '/' J

    '/'  shift, and go to state 22

    $default  reduce using rule 13 (G)


State 16

   15 H: J .
   16 J: J . '^' K

    '^'  shift, and go to state 23

    $default  reduce using rule 15 (H)


State 17

   17 J: K .

    $default  reduce using rule 17 (J)


State 18

    0 $accept: inicio $end .

    $default  accept


State 19

    8 E: E '+' . T

    NUMERO  shift, and go to state 2
    '('     shift, and go to state 3

    T  go to state 26
    G  go to state 14
    H  go to state 15
    J  go to state 16
    K  go to state 17


State 20

   10 T: T '-' . G

    NUMERO  shift, and go to state 2
    '('     shift, and go to state 3

    G  go to state 27
    H  go to state 15
    J  go to state 16
    K  go to state 17


State 21

   12 G: G '*' . H

    NUMERO  shift, and go to state 2
    '('     shift, and go to state 3

    H  go to state 28
    J  go to state 16
    K  go to state 17


State 22

   14 H: H '/' . J

    NUMERO  shift, and go to state 2
    '('     shift, and go to state 3

    J  go to state 29
    K  go to state 17


State 23

   16 J: J '^' . K

    NUMERO  shift, and go to state 2
    '('     shift, and go to state 3

    K  go to state 30


State 24

    1 inicio: NOMBRE '=' E .
    8 E: E . '+' T

    '+'  shift, and go to state 19

    $default  reduce using rule 1 (inicio)


State 25

   19 K: '(' E ')' .

    $default  reduce using rule 19 (K)


State 26

    8 E: E '+' T .
   10 T: T . '-' G

    '-'  shift, and go to state 20

    $default  reduce using rule 8 (E)


State 27

   10 T: T '-' G .
   12 G: G . '*' H

    '*'  shift, and go to state 21

    $default  reduce using rule 10 (T)


State 28

   12 G: G '*' H .
   14 H: H . '/' J

    '/'  shift, and go to state 22

    $default  reduce using rule 12 (G)


State 29

   14 H: H '/' J .
   16 J: J . '^' K

    '^'  shift, and go to state 23

    $default  reduce using rule 14 (H)


State 30

   16 J: J '^' K .

    $default  reduce using rule 16 (J)
